refactor(hydro-21867): refactored stories for select component and button component

--- a/projects/ui-kit/components/buttons/icon-button/icon-button.component.html
+++ b/projects/ui-kit/components/buttons/icon-button/icon-button.component.html
@@ -1,8 +1,6 @@
 <button mat-icon-button [color]="color" [disabled]="disabled">
 	<ng-container *ngIf="!isLoading; else loader">
-		<mat-icon>
-			<ng-content> </ng-content>
-		</mat-icon>
+		<mat-icon [svgIcon]="icon"></mat-icon>
 	</ng-container>
 
 	<ng-template #loader>
