docs(hydro-21871): created services to manage user settings and session
Created stories to manage user's session. Refactored user settings service to use stored user
information. Updated stories and components for side navigation.

--- a/projects/ui-kit/components/select/select.component.html
+++ b/projects/ui-kit/components/select/select.component.html
@@ -3,10 +3,10 @@
 
 	<mat-select
 		[multiple]="multiple"
-		[ngModel]="_value"
+		[value]="value"
 		[disabled]="_isDisabled"
 		[errorStateMatcher]="this"
-		(ngModelChange)="_onChange($event)">
+		(selectionChange)="_onChange($event)">
 		<mat-option *ngFor="let option of options" [value]="option.value">
 			<ng-container [ngTemplateOutlet]="option.content"></ng-container>
 		</mat-option>
