--- a/projects/ui-kit/styles/index.scss
+++ b/projects/ui-kit/styles/index.scss
@@ -3,6 +3,7 @@
 @use 'light' as q9-light;
 @use 'utils' as utils;
 
+//TODO: remove material icons family after development
 @import url('https://fonts.googleapis.com/css2?family=Material+Icons&family=Roboto:wght@300;400;500;600');
 
 body {
